Alterando as receitas, aumenta imagem da receita

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
         <link href="https://fonts.googleapis.com/css?family=Pacifico|Roboto:100,300,400,500,700,900" rel="stylesheet" />
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <title>Live better</title>
         <link href="./assets/css/normalize.css" rel="stylesheet" />
         <link href="./assets/css/reset.css" rel="stylesheet" />
@@ -39,51 +38,51 @@
         </section>
         <section class="recipes" id="recipes">
           <div class="recipe">
-            <img src="./assets/img/receitas/tigela-de-abacate.jpg" alt="Tigela com abacates" class="recipe-image">
+            <img src="./assets/img/receitas/receita-penne.jpg" alt="Penne com escarola e atum" class="recipe-image">
             <div class="recipe-content">
-              <h2 class="recipe-title">Tigela de abacate</h2>
-              <p class="recipe-description">Receita refrescante e cheia de vitaminas para seu café da manhã.</p>
-              <button class="recipe-button" data-recipe-button="Abacate">Ver receita</button>
+              <h2 class="recipe-title">Penne com escarola e atum</h2>
+              <p class="recipe-description">Receita saudável, com poucos ingredientes e fácil de preparar.</p>
+              <button class="recipe-button" data-recipe-button>Ver receita</button>
             </div>
           </div>
           <div class="recipe">
-            <img src="./assets/img/receitas/salada-de-kiwi.jpg" alt="Tigela com salada de kiwi" class="recipe-image">
+            <img src="./assets/img/receitas/receita-pretzel.png" alt="Pretzels de pizza" class="recipe-image">
             <div class="recipe-content">
-              <h2 class="recipe-title">Salada de kiwi</h2>
-              <p class="recipe-description">Receita refrescante e cheia de vitaminas para seu café da manhã.</p>
-              <button class="recipe-button" data-recipe-button="Kiwi">Ver receita</button>
+              <h2 class="recipe-title">Pretzels de pizza</h2>
+              <p class="recipe-description">Receita saudável, com poucos ingredientes e fácil de preparar.</p>
+              <button class="recipe-button" data-recipe-button>Ver receita</button>
             </div>
           </div>
           <div class="recipe">
-            <img src="./assets/img/receitas/mix-de-vegetais.jpg" alt="Tigela com diversos vegetais" class="recipe-image">
+            <img src="./assets/img/receitas/receita-salada.jpg" alt="Salada de folhas" class="recipe-image">
             <div class="recipe-content">
-              <h2 class="recipe-title">Mix de vegetais</h2>
-              <p class="recipe-description">Receita refrescante e cheia de vitaminas para seu café da manhã.</p>
-              <button class="recipe-button" data-recipe-button="Vegetais">Ver receita</button>
+              <h2 class="recipe-title">Salada de folhas</h2>
+              <p class="recipe-description">Receita saudável, com poucos ingredientes e fácil de preparar.</p>
+              <button class="recipe-button" data-recipe-button>Ver receita</button>
             </div>
           </div>
           <div class="recipe">
-            <img src="./assets/img/receitas/pimentoes-a-juliana.jpg" alt="Tigela com pimentões" class="recipe-image">
+            <img src="./assets/img/receitas/receita-brigadeiro.jpeg" alt="Brigadeiros veganos" class="recipe-image">
             <div class="recipe-content">
-              <h2 class="recipe-title">Pimentões à Juliana</h2>
-              <p class="recipe-description">Receita refrescante e cheia de vitaminas para seu café da manhã.</p>
-              <button class="recipe-button" data-recipe-button="Juliana">Ver receita</button>
+              <h2 class="recipe-title">Brigadeiro vegano</h2>
+              <p class="recipe-description">Sobremesa light, com poucos ingredientes e fácil de preparar.</p>
+              <button class="recipe-button" data-recipe-button>Ver receita</button>
             </div>
           </div>
           <div class="recipe">
-            <img src="./assets/img/receitas/prato-oriental.jpg" alt="Prato de origem oriental" class="recipe-image">
+            <img src="./assets/img/receitas/receita-mousse.jpg" alt="Prato de origem oriental" class="recipe-image">
             <div class="recipe-content">
-              <h2 class="recipe-title">Prato oriental</h2>
-              <p class="recipe-description">Receita refrescante e cheia de vitaminas para seu café da manhã.</p>
-              <button class="recipe-button" data-recipe-button="Oriental">Ver receita</button>
+              <h2 class="recipe-title">Mousse de pitaya</h2>
+              <p class="recipe-description">Sobremesa light, com poucos ingredientes e fácil de preparar.</p>
+              <button class="recipe-button" data-recipe-button>Ver receita</button>
             </div>
           </div>
           <div class="recipe">
-            <img src="./assets/img/receitas/beterrabas-assadas.jpg" alt="Beterrabas assadas" class="recipe-image">
+            <img src="./assets/img/receitas/receita-granola.jpg" alt="Granola de coco crocante" class="recipe-image">
             <div class="recipe-content">
-              <h2 class="recipe-title">Beterrabas assadas</h2>
-              <p class="recipe-description">Receita refrescante e cheia de vitaminas para seu café da manhã.</p>
-              <button class="recipe-button" data-recipe-button="Beterrabas">Ver receita</button>
+              <h2 class="recipe-title">Granola de coco crocante</h2>
+              <p class="recipe-description">Sobremesa light, com poucos ingredientes e fácil de preparar.</p>
+              <button class="recipe-button" data-recipe-button>Ver receita</button>
             </div>
           </div>
         </section>
