Adiciona as informacoes das receitas na modal

--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
               <i class="icon-close"></i>
             </div>
             <div class="modal-ingredients">
-              <h3 class="modal-title--sec">Ingredientes</h3>
+              <h3 class="modal-title--sec">Ingredientes 🧾</h3>
             </div>
             <div class="modal-preparation">
-              <h3 class="modal-title--sec">Modo de preparo</h3>
+              <h3 class="modal-title--sec">Modo de preparo 🍳</h3>
             </div>
           </div>
         </section>
